public static class CharacterAnimatorParams
{
    public static readonly int HorizontalSpeed = UnityEngine.Animator.StringToHash("Horizontal");
    
    public static readonly int AttackFrames = UnityEngine.Animator.StringToHash("AttackFrames");
    public static readonly int ComboFrames = UnityEngine.Animator.StringToHash("ComboFrames");
        
    public static readonly int AttackTrigger = UnityEngine.Animator.StringToHash("Attack");
    
    public static readonly int IsFighting = UnityEngine.Animator.StringToHash("IsFighting");
}